// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdditionalSettings /> spec renders the component with high cardinality disabled 1`] = `
<div>
  <div
    class="euiBasicTable header-single-value-euiBasicTable"
  >
    <div>
      <div
        class="euiTableHeaderMobile"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          />
        </div>
      </div>
      <table
        class="euiTable euiTable--responsive"
        id="random_html_id"
        tabindex="-1"
      >
        <caption
          class="euiScreenReaderOnly euiTableCaption"
        />
        <thead>
          <tr>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_categoryField_0"
              role="columnheader"
              scope="col"
            >
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Category field"
                >
                  Category field
                </span>
              </div>
            </th>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_windowSize_1"
              role="columnheader"
              scope="col"
            >
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Window size"
                >
                  Window size
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="euiTableRow"
          >
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Category field
              </div>
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  -
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Window size
              </div>
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  8
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<AdditionalSettings /> spec renders the component with high cardinality enabled 1`] = `
<div>
  <div
    class="euiBasicTable header-single-value-euiBasicTable"
  >
    <div>
      <div
        class="euiTableHeaderMobile"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          />
        </div>
      </div>
      <table
        class="euiTable euiTable--responsive"
        id="random_html_id"
        tabindex="-1"
      >
        <caption
          class="euiScreenReaderOnly euiTableCaption"
        />
        <thead>
          <tr>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_categoryField_0"
              role="columnheader"
              scope="col"
            >
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Category field"
                >
                  Category field
                </span>
              </div>
            </th>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_windowSize_1"
              role="columnheader"
              scope="col"
            >
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Window size"
                >
                  Window size
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="euiTableRow"
          >
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Category field
              </div>
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  test_field
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Window size
              </div>
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  8
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
